docs: document Java 11 RuneLite standards